# UR5e_Torque

./: .gitignore  README.md
joint_test/: CMakeLists.txt  build.sh  get_ref.py  get_traindata.py  joint_impedance.py  live_plotter.py  run.sh  sindy_motor.py  sindy_utils.py  sys_iden.py  torque_ISM.py  torque_ISM_tuning.py  torque_SMC.py  torque_comp.py  torque_comp_Cfriction.py  torque_ctrl.py  torque_decoupledPD.py  vel_ctrl.py  verify_kt.py  visualization.py
joint_test/Config/: Kt_calibration_results.yaml  Ref.yaml  joint_0_param.yaml  joint_1_param.yaml  joint_2_param.yaml  joint_3_param.yaml  joint_4_param.yaml  joint_5_param.yaml
joint_test/Data/: .~lock.identified_params_ur5e.csv#  identified_params.yaml  identified_params_ur5e.csv  opt_sltn_N5T20_full_trajectory.csv
joint_test/SINDy_matlab/: EX_JOINT_SI_SINDYc.m  JointSys.m  POS_CTRL.m  README.md  VIZ_SI_Validation_Joint.m  getTrainingData.m  poolDataLIST.m  poolDataLISTMotor.m  poolDataMotor.m  sparseGalerkinControl_Motor.m  sparsifyDynamicsIndependent.m  trainSINDYc_Joint.m
joint_test/src/: torque_smc.cpp
joint_test/tools/: rebuild_xml.py
joint_test/universal_robots_ur5e/: scene.xml  scene_torque.xml  ur5e_real.xml  ur5e_torque.xml
joint_test/ur5e_gripper/: ur5_gripper.mujoco.xml  ur5e_gripper.xml
my_ws/: CMakeLists.txt  MUJOCO_LOG.TXT  run.sh  run_posinit.sh
my_ws/config/: .~lock.identified_params_ur5e(1).csv#  ctrl_config.yaml  init_pos.txt  joint0_fric.yaml  joint1_fric.yaml  joint2_fric.yaml  joint3_fric.yaml  joint4_fric.yaml  joint5_fric.yaml  joint_fric_WLS.yaml  sys_config.yaml
my_ws/doc/: 实验方案设计.md
my_ws/include/: torque_ctrl.hpp
my_ws/script/: Controller.py  export_model_ur5e.py  export_mujoco_xml_with_relative_stl.py  grav_comp.py  nmpc_controller_ur5e.py  run_imp_ctrl.sh  run_ros2_rviz_ur5_gripper.sh  run_rviz_ur5_gripper_urdf.sh  run_torque_ctrl.sh  run_vis.sh  temp.py  torque_JointSpace.py  torque_NMPC ISM.py  torque_NMPC.py  (+10 more)
(+50 files in other folders)
